# whisper_x_rep

./: .gitignore  pyproject.toml
src/: main.py  rep_rer.json
src/core/: consts.py  transform_data.py
